# gpgc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gpgc.cpp  gpgc.h  gpgc.hpp  gpgcconv.cc  gpgcdecode.cc  gpgcencode.cc  gpgclinearalgebra.c  gpgclinearalgebra.cc  gpgcmath.h  gpgcutil.cc  gpgcutil.hpp  here.gpgc  nohup.out  output.txt  show_errors.py  test.gpgc
.cache/clangd/index/: gpgc.cpp.59E14D9758579746.idx  gpgc.hpp.8DF55ECA846A8CAE.idx  gpgcconv.cc.BFAB5D478757D6A7.idx  half.hpp.8B38BB7EFD16BD96.idx
bench/: benchmarking.ipynb
charts/: proc.md
data/: test1.tif
interface/: CMakeLists.txt  gpgc_interface_test.cpp  gpgc_python_implementation.cpp  gpgc_python_interface.cpp  gpgc_python_interface.hpp
py/: .~lock.data_out.csv#  analysis.py  benchmarking.ipynb  data_out.csv  decode.jl  decode.py  gdal.py  gtif2sid.py  mosaic.py  normalization.py  post.ipynb  post.jl  postanalysis.py  show_errors.py  test.gpgc  vis_tif.py
test/: CMakeLists.txt  main.cpp
